kovila/x27.output
Terminaux inutilisés dans la grammaire

   KEY
   VALUE
   OPEN
   NUM
   IF
   CONDITION
   THEN
   ELSE
   REC
   WITH
   EMITT
   OPEN_FOREST
   '+'
   '-'
   '*'
   '/'
   '^'


État 13 conflits: 1 décalage/réduction


Grammaire

    0 $accept: vrai_final $end

    1 vrai_final: final_doc

    2 final_doc: final_doc doc
    3          | doc

    4 doc: var_declaration
    5    | var_loc_in
    6    | var_loc_where
    7    | expression

    8 var_loc_where: expression WHERE IDEN '=' var_loc_where
    9              | expression WHERE IDEN '=' var_loc_in
   10              | expression WHERE IDEN '=' expression

   11 var_loc_in: LET IDEN '=' expression IN var_loc_in
   12           | LET IDEN '=' expression IN expression

   13 var_declaration: LET partial_declaration

   14 partial_declaration: IDEN '=' partial_declaration
   15                    | IDEN '=' expression ';'

   16 expression: foret
   17           | ARITH_EXPR
   18           | IDEN

   19 foret: foret arbre
   20      | arbre
   21      | texte

   22 arbre: balise chaine CLOSE

   23 chaine: chaine intermediaire
   24       | intermediaire

   25 intermediaire: EMPTY_NODE
   26              | texte
   27              | arbre
   28              | IDEN

   29 texte: TEXT

   30 balise: TAG
   31       | TAG ATTR_FOUND


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
';' (59) 15
'=' (61) 8 9 10 11 12 14 15
'^' (94)
error (256)
KEY (258)
VALUE (259)
TAG (260) 30 31
TEXT (261) 29
IDEN (262) 8 9 10 11 12 14 15 18 28
EMPTY_NODE (263) 25
ATTR_FOUND (264) 31
OPEN (265)
CLOSE (266) 22
NUM (267)
IF (268)
CONDITION (269)
THEN (270)
ELSE (271)
ARITH_EXPR (272) 17
LET (273) 11 12 13
REC (274)
IN (275) 11 12
WHERE (276) 8 9 10
WITH (277)
EMITT (278)
OPEN_FOREST (279)


Non-terminaux, suivis des règles où ils apparaissent

$accept (32)
    à gauche: 0
vrai_final (33)
    à gauche: 1, à droite: 0
final_doc (34)
    à gauche: 2 3, à droite: 1 2
doc (35)
    à gauche: 4 5 6 7, à droite: 2 3
var_loc_where (36)
    à gauche: 8 9 10, à droite: 6 8
var_loc_in (37)
    à gauche: 11 12, à droite: 5 9 11
var_declaration (38)
    à gauche: 13, à droite: 4
partial_declaration (39)
    à gauche: 14 15, à droite: 13 14
expression (40)
    à gauche: 16 17 18, à droite: 7 8 9 10 11 12 15
foret (41)
    à gauche: 19 20 21, à droite: 16 19
arbre (42)
    à gauche: 22, à droite: 19 20 27
chaine (43)
    à gauche: 23 24, à droite: 22 23
intermediaire (44)
    à gauche: 25 26 27 28, à droite: 23 24
texte (45)
    à gauche: 29, à droite: 21 26
balise (46)
    à gauche: 30 31, à droite: 22


État 0

    0 $accept: . vrai_final $end

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 3
    ARITH_EXPR  décalage et aller à l'état 4
    LET         décalage et aller à l'état 5

    vrai_final       aller à l'état 6
    final_doc        aller à l'état 7
    doc              aller à l'état 8
    var_loc_where    aller à l'état 9
    var_loc_in       aller à l'état 10
    var_declaration  aller à l'état 11
    expression       aller à l'état 12
    foret            aller à l'état 13
    arbre            aller à l'état 14
    texte            aller à l'état 15
    balise           aller à l'état 16


État 1

   30 balise: TAG .
   31       | TAG . ATTR_FOUND

    ATTR_FOUND  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 30 (balise)


État 2

   29 texte: TEXT .

    $défaut  réduction par utilisation de la règle 29 (texte)


État 3

   18 expression: IDEN .

    $défaut  réduction par utilisation de la règle 18 (expression)


État 4

   17 expression: ARITH_EXPR .

    $défaut  réduction par utilisation de la règle 17 (expression)


État 5

   11 var_loc_in: LET . IDEN '=' expression IN var_loc_in
   12           | LET . IDEN '=' expression IN expression
   13 var_declaration: LET . partial_declaration

    IDEN  décalage et aller à l'état 18

    partial_declaration  aller à l'état 19


État 6

    0 $accept: vrai_final . $end

    $end  décalage et aller à l'état 20


État 7

    1 vrai_final: final_doc .
    2 final_doc: final_doc . doc

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 3
    ARITH_EXPR  décalage et aller à l'état 4
    LET         décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 1 (vrai_final)

    doc              aller à l'état 21
    var_loc_where    aller à l'état 9
    var_loc_in       aller à l'état 10
    var_declaration  aller à l'état 11
    expression       aller à l'état 12
    foret            aller à l'état 13
    arbre            aller à l'état 14
    texte            aller à l'état 15
    balise           aller à l'état 16


État 8

    3 final_doc: doc .

    $défaut  réduction par utilisation de la règle 3 (final_doc)


État 9

    6 doc: var_loc_where .

    $défaut  réduction par utilisation de la règle 6 (doc)


État 10

    5 doc: var_loc_in .

    $défaut  réduction par utilisation de la règle 5 (doc)


État 11

    4 doc: var_declaration .

    $défaut  réduction par utilisation de la règle 4 (doc)


État 12

    7 doc: expression .
    8 var_loc_where: expression . WHERE IDEN '=' var_loc_where
    9              | expression . WHERE IDEN '=' var_loc_in
   10              | expression . WHERE IDEN '=' expression

    WHERE  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 7 (doc)


État 13

   16 expression: foret .
   19 foret: foret . arbre

    TAG  décalage et aller à l'état 1

    TAG       [réduction par utilisation de la règle 16 (expression)]
    $défaut  réduction par utilisation de la règle 16 (expression)

    arbre   aller à l'état 23
    balise  aller à l'état 16


État 14

   20 foret: arbre .

    $défaut  réduction par utilisation de la règle 20 (foret)


État 15

   21 foret: texte .

    $défaut  réduction par utilisation de la règle 21 (foret)


État 16

   22 arbre: balise . chaine CLOSE

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 24
    EMPTY_NODE  décalage et aller à l'état 25

    arbre          aller à l'état 26
    chaine         aller à l'état 27
    intermediaire  aller à l'état 28
    texte          aller à l'état 29
    balise         aller à l'état 16


État 17

   31 balise: TAG ATTR_FOUND .

    $défaut  réduction par utilisation de la règle 31 (balise)


État 18

   11 var_loc_in: LET IDEN . '=' expression IN var_loc_in
   12           | LET IDEN . '=' expression IN expression
   14 partial_declaration: IDEN . '=' partial_declaration
   15                    | IDEN . '=' expression ';'

    '='  décalage et aller à l'état 30


État 19

   13 var_declaration: LET partial_declaration .

    $défaut  réduction par utilisation de la règle 13 (var_declaration)


État 20

    0 $accept: vrai_final $end .

    $défaut  accepter


État 21

    2 final_doc: final_doc doc .

    $défaut  réduction par utilisation de la règle 2 (final_doc)


État 22

    8 var_loc_where: expression WHERE . IDEN '=' var_loc_where
    9              | expression WHERE . IDEN '=' var_loc_in
   10              | expression WHERE . IDEN '=' expression

    IDEN  décalage et aller à l'état 31


État 23

   19 foret: foret arbre .

    $défaut  réduction par utilisation de la règle 19 (foret)


État 24

   28 intermediaire: IDEN .

    $défaut  réduction par utilisation de la règle 28 (intermediaire)


État 25

   25 intermediaire: EMPTY_NODE .

    $défaut  réduction par utilisation de la règle 25 (intermediaire)


État 26

   27 intermediaire: arbre .

    $défaut  réduction par utilisation de la règle 27 (intermediaire)


État 27

   22 arbre: balise chaine . CLOSE
   23 chaine: chaine . intermediaire

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 24
    EMPTY_NODE  décalage et aller à l'état 25
    CLOSE       décalage et aller à l'état 32

    arbre          aller à l'état 26
    intermediaire  aller à l'état 33
    texte          aller à l'état 29
    balise         aller à l'état 16


État 28

   24 chaine: intermediaire .

    $défaut  réduction par utilisation de la règle 24 (chaine)


État 29

   26 intermediaire: texte .

    $défaut  réduction par utilisation de la règle 26 (intermediaire)


État 30

   11 var_loc_in: LET IDEN '=' . expression IN var_loc_in
   12           | LET IDEN '=' . expression IN expression
   14 partial_declaration: IDEN '=' . partial_declaration
   15                    | IDEN '=' . expression ';'

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 34
    ARITH_EXPR  décalage et aller à l'état 4

    partial_declaration  aller à l'état 35
    expression           aller à l'état 36
    foret                aller à l'état 13
    arbre                aller à l'état 14
    texte                aller à l'état 15
    balise               aller à l'état 16


État 31

    8 var_loc_where: expression WHERE IDEN . '=' var_loc_where
    9              | expression WHERE IDEN . '=' var_loc_in
   10              | expression WHERE IDEN . '=' expression

    '='  décalage et aller à l'état 37


État 32

   22 arbre: balise chaine CLOSE .

    $défaut  réduction par utilisation de la règle 22 (arbre)


État 33

   23 chaine: chaine intermediaire .

    $défaut  réduction par utilisation de la règle 23 (chaine)


État 34

   14 partial_declaration: IDEN . '=' partial_declaration
   15                    | IDEN . '=' expression ';'
   18 expression: IDEN .

    '='  décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 18 (expression)


État 35

   14 partial_declaration: IDEN '=' partial_declaration .

    $défaut  réduction par utilisation de la règle 14 (partial_declaration)


État 36

   11 var_loc_in: LET IDEN '=' expression . IN var_loc_in
   12           | LET IDEN '=' expression . IN expression
   15 partial_declaration: IDEN '=' expression . ';'

    IN   décalage et aller à l'état 39
    ';'  décalage et aller à l'état 40


État 37

    8 var_loc_where: expression WHERE IDEN '=' . var_loc_where
    9              | expression WHERE IDEN '=' . var_loc_in
   10              | expression WHERE IDEN '=' . expression

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 3
    ARITH_EXPR  décalage et aller à l'état 4
    LET         décalage et aller à l'état 41

    var_loc_where  aller à l'état 42
    var_loc_in     aller à l'état 43
    expression     aller à l'état 44
    foret          aller à l'état 13
    arbre          aller à l'état 14
    texte          aller à l'état 15
    balise         aller à l'état 16


État 38

   14 partial_declaration: IDEN '=' . partial_declaration
   15                    | IDEN '=' . expression ';'

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 34
    ARITH_EXPR  décalage et aller à l'état 4

    partial_declaration  aller à l'état 35
    expression           aller à l'état 45
    foret                aller à l'état 13
    arbre                aller à l'état 14
    texte                aller à l'état 15
    balise               aller à l'état 16


État 39

   11 var_loc_in: LET IDEN '=' expression IN . var_loc_in
   12           | LET IDEN '=' expression IN . expression

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 3
    ARITH_EXPR  décalage et aller à l'état 4
    LET         décalage et aller à l'état 41

    var_loc_in  aller à l'état 46
    expression  aller à l'état 47
    foret       aller à l'état 13
    arbre       aller à l'état 14
    texte       aller à l'état 15
    balise      aller à l'état 16


État 40

   15 partial_declaration: IDEN '=' expression ';' .

    $défaut  réduction par utilisation de la règle 15 (partial_declaration)


État 41

   11 var_loc_in: LET . IDEN '=' expression IN var_loc_in
   12           | LET . IDEN '=' expression IN expression

    IDEN  décalage et aller à l'état 48


État 42

    8 var_loc_where: expression WHERE IDEN '=' var_loc_where .

    $défaut  réduction par utilisation de la règle 8 (var_loc_where)


État 43

    9 var_loc_where: expression WHERE IDEN '=' var_loc_in .

    $défaut  réduction par utilisation de la règle 9 (var_loc_where)


État 44

    8 var_loc_where: expression . WHERE IDEN '=' var_loc_where
    9              | expression . WHERE IDEN '=' var_loc_in
   10              | expression . WHERE IDEN '=' expression
   10              | expression WHERE IDEN '=' expression .

    WHERE  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 10 (var_loc_where)


État 45

   15 partial_declaration: IDEN '=' expression . ';'

    ';'  décalage et aller à l'état 40


État 46

   11 var_loc_in: LET IDEN '=' expression IN var_loc_in .

    $défaut  réduction par utilisation de la règle 11 (var_loc_in)


État 47

   12 var_loc_in: LET IDEN '=' expression IN expression .

    $défaut  réduction par utilisation de la règle 12 (var_loc_in)


État 48

   11 var_loc_in: LET IDEN . '=' expression IN var_loc_in
   12           | LET IDEN . '=' expression IN expression

    '='  décalage et aller à l'état 49


État 49

   11 var_loc_in: LET IDEN '=' . expression IN var_loc_in
   12           | LET IDEN '=' . expression IN expression

    TAG         décalage et aller à l'état 1
    TEXT        décalage et aller à l'état 2
    IDEN        décalage et aller à l'état 3
    ARITH_EXPR  décalage et aller à l'état 4

    expression  aller à l'état 50
    foret       aller à l'état 13
    arbre       aller à l'état 14
    texte       aller à l'état 15
    balise      aller à l'état 16


État 50

   11 var_loc_in: LET IDEN '=' expression . IN var_loc_in
   12           | LET IDEN '=' expression . IN expression

    IN  décalage et aller à l'état 39
